// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserLink inserts only the user name if given a zero user ID 1`] = `
<bdi>
  Example User
</bdi>
`;

exports[`UserLink links to the user page if given a positive user ID 1`] = `
<a
  href="https://wiki.example/wiki/Special:Redirect/user/1234"
>
  <bdi>
    Example User
  </bdi>
</a>
`;
